<resources>
    <string name="global_tag">XLog</string>
    <string name="app_name">IONChainWallet</string>
    <string name="menu_import_scan">Scan</string>
    <string name="menu_scan_album">Album</string>
    <string name="menu_main_add">Add</string>
    <string name="menu_wallet_modify_save">Save</string>
    <string name="menu_wallet_modify_complete">Complete</string>
    <string name="wallet_create_password_again">Repeat  password</string>
    <string name="exit_app">Press twice to exit!</string>
    <string name="protocol_title">Terms and conditions of IONChainWallet</string>
    <string name="protocol_hint">I have read  carefully and agree</string>
    <string name="password_rule">Include numbers, capital and non-capital letters, symbols(except space and underscore), length: 8~12 characters</string>
    <string name="wallet_icon">Wallet icon</string>
    <string name="tx_in">Roll-in</string>
    <string name="tx_out">Roll-out</string>
    <string name="tx_recorder">Transaction record</string>
    <string name="header_back">Background</string>
    <string name="name_hint">Name exclude special characters, length can nott exceed 8 charactersg</string>
    <string name="import_wallet_text">Import  wallet</string>
    <string name="back_arrow">Back</string>
    <string name="language_setting">Language Settings</string>
    <string name="language_cn">Chinese</string>
    <string name="language_en">English</string>
    <string name="language_auto">Default</string>
    <string name="setting_select_language">Current language chosen:  %s</string>
    <string name="nav_mine">Mine</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="version">Version：%s</string>
    <string name="updating">Checking for update ……</string>
    <string name="error_code">" %s"</string>
    <string name="update_msg_title">New version ：%s ，please update！</string>
    <string name="dialog_btn_download">Download</string>
    <string name="download_cancel">Cancel</string>
    <string name="error_net_download">Download network error</string>
    <string name="protocol_please_read">Please read and agree to terms and conditions</string>
    <string name="protocol_first">Agreed to    </string>
    <string name="protocol_service_agreement">Terms and conditions</string>
    <string name="app_create_wallet">Create Wallet</string>
    <string name="app_import_wallet">Import Wallet</string>
    <string name="distributed_intelligent_digital_wallet">Distributed Intelligent Digital Wallet</string>
    <string name="please_input_wallet_name">Please enter name</string>
    <string name="illegal_name">Name do not match the requirements!</string>
    <string name="illegal_name_length">Do not exceed 8 characters</string>
    <string name="wallet_name_exists">Wallet name existed</string>
    <string name="illegal_password">Password do not match the requirements!</string>
    <string name="illegal_password_must_equal">Password and repeat password must be the same</string>
    <string name="creating_wallet">Creating Wallet……</string>
    <string name="please_input_wallet_password">Please enter  password</string>
    <string name="please_input_wallet_password_again">Please enter repeat password </string>
    <string name="attention">Note</string>
    <string name="i_know">I have known and saved</string>
    <string name="key_store_to_save">Please keep the mnemonic words well. Your assets may face heavy losses once missing!</string>
    <string name="error_mnemonics">Wrong mnemonic words</string>
    <string name="error_index_mnemonics">The No. %s mnemonic you entered is incorrect</string>
    <string name="authentication_successful">Verification successful!</string>
    <string name="act_wallet_create_notify1_app">Password is set to protect private keys, thus password strength is important </string>
    <string name="act_wallet_create_notify2_app">Please note that IONC Token won not t store password, and won not help to find back password either</string>
    <string name="select_import_title">Please choose ways to import</string>
    <string name="import_m_pri">Private Key</string>
    <string name="import_m_mnemonics">Mnemonic words</string>
    <string name="keystore">Keystore</string>
    <string name="illegal_password_null">Password cannot be emptied!</string>
    <string name="illegal_re_password_null">Repeat password cannot be emptied!</string>
    <string name="illegal_private_key">Invalid private key!</string>
    <string name="illegal_private_key_null">Private key cannot be emptied!</string>
    <string name="importing_wallet">Importing wallet, please wait for a moment</string>
    <string name="error_parase_toast_qr_code">QR Code analysis failed</string>
    <string name="import_and_update_password">Continue to import? Password will be updated if continue!</string>
    <string name="continues">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="import_success">Imported successful</string>
    <string name="import_error">Import failed</string>
    <string name="update_success">Updated successfully!</string>
    <string name="import_private_key">Import private key</string>
    <string name="explicit_private_key">Terms of private key</string>
    <string name="about_us">About us</string>
    <string name="my_devices">Devices</string>
    <string name="tab_device">Devices</string>
    <string name="tab_mine">Mine</string>
    <string name="tab_asset">Assets</string>
    <string name="wallet_null_toast">You do not have one wallet, please create or import one</string>
    <string name="toast_please_backup_wallet">Please backup your wallet</string>
    <string name="sure_to_bind_device">Confirm remove device?</string>
    <string name="wallet">Wallet</string>
    <string name="before_use_backup">Backup before use</string>
    <string name="record">Transaction record</string>
    <string name="app_update_no">Latest version updated</string>
    <string name="modify_dialog_title">Change password</string>
    <string name="modify_password_notice">Password is set to protect private keys, thus password strength is important. Please note that IONC Token would not store password, and would not help to find back password either</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Enter new password again</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_sure">Confirm</string>
    <string name="next_step">Next step</string>
    <string name="mnemonic_hint">Mnemonic words are used to renew wallet or reset password. Please copy down correctly on a paper, and put in a safe place without being noticed, as system will not store the words. </string>
    <string name="btn_sure_text">Confirm</string>
    <string name="not_now">Later</string>
    <string name="dialog_version_info">If you would like to let the administrators of  this website know that you\'ve seen this page instead of the page you expected, you should send them e-mail. In general, mail sent to the name webmaster and directed to the website\'s domain should reach the appropriate person.</string>
    <string name="btn_close">Close</string>
    <string name="btn_update">Update</string>
    <string name="version_info_title">Version Information</string>
    <string name="download_progress_tv">Downloading……</string>
    <string name="tx_hash">Hash</string>
    <string name="tx_block">Block</string>
    <string name="tx_out_addr">Outgoing Address</string>
    <string name="tx_in_addr">Roll-in Address</string>
    <string name="tx_amount">Amount</string>
    <string name="tx_fee">Fee</string>
    <string name="error_net_device_list">Device list server error!</string>
    <string name="error_data_parse">Data analysis failed"</string>
    <string name="wallet_exists">Wallet existed</string>
    <string name="wallet_name_must_not_empty">Wallet name cannot be emptied</string>
    <string name="export_private_key">Export Private Key</string>
    <string name="copy_done">Copied to clipboard</string>
    <string name="sure">Confirm</string>
    <string name="modify_password_success">Password changed successfully</string>
    <string name="modify_password_failure">Password change failed</string>
    <string name="export_keystore">Export KeyStory</string>
    <string name="modifying_password">Changing password</string>
    <string name="please_check_password">Please check your password</string>
    <string name="copy_done_private">Private key copied</string>
    <string name="copy_done_ks">Keystory copied</string>
    <string name="please_check_addr_amount">Please check whether all transfer address or amount are filled</string>
    <string name="submit_success">Successfully sent</string>
    <string name="submit_failure">Transaction failed</string>
    <string name="error_net_get_balance">Failed to get balance :</string>
    <string name="error_input_password">Please enter the correct password</string>
    <string name="app_loading">Loading…</string>
    <string name="copy_done_addr">Address copied</string>
    <string name="error_copy">Copy failed</string>
    <string name="balance_">Balance</string>
    <string name="save_pos">Saved successfully! \n save path: SD card root directory ionchainAddress folder</string>
    <string name="permission_request">Please allow relevant access first</string>
    <string name="permission_storage">Access for saving required</string>
    <string name="permission_camera">Allow access to cameras and vibration for QR Code scanning</string>
    <string name="error_app_update">Fail to check updates</string>
    <string name="mnemonics_rule">Mnemonic words, separated by Spaces</string>
    <string name="keystore_edit_tx_title_hint">Copy file content of Ethereum official wallet "keystore" and paste to input box</string>
    <string name="keystore_password_input">Please enter the keystore password</string>
    <string name="keystore_title">Import Keystore</string>
    <string name="import_btn">Import</string>
    <string name="check_mnemonics_dialog_title">Please enter your saved mnemonic words in order</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="midify_password">Change password</string>
    <string name="export_mnemonics">Export mnemonic words</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="wallet_address">Address</string>
    <string name="please_input_current_password">Please enter current password</string>
    <string name="please_input_new_password">Please enter  new password</string>
    <string name="please_input_new_password_2">Please enter your new password again</string>
    <string name="alert">Safety warning! Imported information contains risks, please keep safe!</string>
    <string name="copy_tx">Copy</string>
    <string name="password_tx">Password</string>
    <string name="title_manage_wallet">Wallet management</string>
    <string name="wallet_name_input">Please enter a name</string>
    <string name="key_store_must_not_empty">Keystore can\'t be empty</string>
    <string name="error_device_all_service">Error in receiving all devices</string>
    <string name="error_net_tx_recorder">Fail to request transaction record</string>
    <string name="payee_address">Payee`s address</string>
    <string name="tx_amount_in_tx">Transfer amount</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="btn_background">Background download</string>
    <string name="coin_type_us">USD</string>
    <string name="coin_type_rmb">CNY</string>
    <string name="coin_type_han_yuan">KRW</string>
    <string name="coin_type_yin_ni_dun">IDR</string>
</resources>