<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/activity_common_title_two" />

    <TextView
        android:id="@+id/tv_user_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/setting_select_language"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_auto"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language_auto"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language_cn"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_en"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language_en"
        android:textAllCaps="false"
        android:textStyle="bold" />
</LinearLayout>
