<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.ionchain.wallet.mvp.view.activity.coin.SelectCoinActivity">

    <include layout="@layout/activity_common_title_two" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/coin_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coin_type_us" />

            <Button
                android:id="@+id/coin_cny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/coin_type_rmb" />

            <Button
                android:id="@+id/coin_krw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/coin_type_han_yuan" />

            <Button
                android:id="@+id/coin_idr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/coin_type_yin_ni_dun" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
