<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/dialog_layout_background"
    android:layout_height="200dp">

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_input_wallet_password"
        android:textColor="#666666"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="81dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:focusedByDefault="true"
        android:singleLine="true"
        android:maxLength="@integer/max_length_pwd"
        android:background="@null"
        android:hint="@string/password_tx"
        tools:targetApi="o" />

    <View
        android:id="@+id/line"
        android:layout_below="@id/password_et"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="7dp"
        android:background="#E4E4E4" />
    <Button
        android:layout_marginTop="145dp"
        android:id="@+id/left_btn"
        android:layout_width="96dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/common_btn_background_grey_color"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />
    <Button
        android:layout_marginTop="145dp"
        android:id="@+id/right_btn"
        android:layout_width="96dp"
        android:layout_alignParentEnd="true"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/common_btn_background_main_color"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>
