<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="360dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@drawable/modify_password_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/modify_dialog_title_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/modify_dialog_title"
        android:textColor="@color/dialog_title_color"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView-->
        <!--android:visibility="gone"-->
        <!--android:id="@+id/modify_dialog_notice"-->
        <!--style="@style/ModifyDialogNoticeTv"-->
        <!--android:textColor="#16BDF5"-->
        <!--android:textSize="@dimen/txt_12sp"-->
        <!--android:text="@string/modify_password_notice"-->
        <!--app:layout_constraintTop_toBottomOf="@id/modify_dialog_title_tv"-->
        <!--tools:ignore="MissingConstraints" />-->

    <TextView
        android:layout_below="@id/modify_dialog_title_tv"
        android:id="@+id/modify_dialog_password_rule"
        style="@style/ModifyDialogNoticeTv"
        android:text="@string/password_rule"
        android:textColor="@color/main_color"
        android:textSize="12sp"
        android:layout_marginTop="13dp"
        tools:ignore="MissingConstraints" />

    <!--当前密码-->
    <RelativeLayout
        android:layout_below="@id/modify_dialog_password_rule"
        android:id="@+id/modify_dialog_current_password_rl"
        style="@style/ModifyDialogPasswordRl"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/modify_dialog_current_password_et"
            style="@style/ModifyDialogAppCompactEditText"
            android:hint="@string/current_password" />
      
    </RelativeLayout>
    <!--新密码-->
    <RelativeLayout
        android:layout_below="@id/modify_dialog_current_password_rl"
        android:id="@+id/modify_dialog_new_password_rl"
        style="@style/ModifyDialogPasswordRl"
        app:layout_constraintTop_toBottomOf="@id/modify_dialog_current_password_rl"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/modify_dialog_new_password_et"
            style="@style/ModifyDialogAppCompactEditText"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_new_password"
            style="@style/LittleEye"
            android:src="@mipmap/hide_password" />

    </RelativeLayout>

    <!--再次输入新密码-->
    <RelativeLayout
        android:layout_below="@id/modify_dialog_new_password_rl"
        android:id="@+id/modify_dialog_new_password_again_rl"
        style="@style/ModifyDialogPasswordRl"
        app:layout_constraintTop_toBottomOf="@id/modify_dialog_new_password_rl"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/modify_dialog_new_password_again_et"
            style="@style/ModifyDialogAppCompactEditText"
            android:hint="@string/new_password_again"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/show_new_password_again"
            style="@style/LittleEye"
            android:src="@mipmap/hide_password" />

    </RelativeLayout>

    <!--底部按钮-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/modify_dialog_new_password_again_rl">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modify_btn_cancel"
            android:layout_width="@dimen/modify_dialog_btn_width"
            android:layout_height="@dimen/modify_dialog_btn_height"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/common_btn_background_grey_color"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textSize="@dimen/modify_dialog_btn_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/modify_btn_sure"
            android:layout_width="@dimen/modify_dialog_btn_width"
            android:layout_height="@dimen/modify_dialog_btn_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/common_btn_background_main_color"
            android:gravity="center"
            android:text="@string/btn_sure"
            android:textColor="@android:color/white"
            android:textSize="@dimen/modify_dialog_btn_text_size" />
    </RelativeLayout>
</RelativeLayout>
