<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h150"
    android:background="@drawable/dialog_download_layout_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/download_progress_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_h20"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/download_progress_tv" />

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/download_progress_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_h20" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/download_progress_btn_cancel"
            android:layout_width="@dimen/dialog_btn_cancel_width_60dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/h40"
            android:layout_marginBottom="@dimen/margin_h20"
            android:background="@drawable/dialog_cancel_btn"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/download_progress_btn_background"
            android:layout_width="@dimen/dialog_btn_cancel_width_60dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/h40"
            android:layout_marginBottom="@dimen/margin_h20"
            android:textColor="@color/white"
            android:background="@drawable/dialog_sure_btn"
            android:text="@string/btn_background" />
    </RelativeLayout>
</LinearLayout>
